@@ -741,7 +741,7 @@ b.datepart b { font-weight: normal }
 #jt_box_vn_rel h2     { margin: 0 0 3px 0px; }
 #jt_box_vn_rel td     { padding: 1px 2px; vertical-align: middle; }
 #jt_box_vn_rel td.tc_vn    { width: 300px; text-align: right }
-#jt_box_vn_rel td.tc_rel   { width: 170px;  white-space: nowrap }
+#jt_box_vn_rel td.tc_rel   { width: 220px; white-space: nowrap }
 #jt_box_vn_rel td.tc_title { width: 200px; }
 #jt_box_vn_rel td.tc_add   { width: 40px; text-align: right }
 #jt_box_vn_rel td.tc_vn input   { width: 280px; }
